RESOLVED FIXED147770
TextIndicator can have stale contentImage data and crash
https://bugs.webkit.org/show_bug.cgi?id=147770
Summary TextIndicator can have stale contentImage data and crash
Beth Dakin
Reported 2015-08-06 21:29:06 PDT
TextIndicator can have stale contentImage data and crash rdar://problem/22181735
Attachments
Patch (1.68 KB, patch)
2015-08-06 21:32 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2015-08-06 21:32:29 PDT
Tim Horton
Comment 2 2015-08-06 21:59:46 PDT
We should look through other coders for similar mistakes, I'm pretty sure I've done this in at least one other place.
Beth Dakin
Comment 3 2015-08-06 22:10:18 PDT
Note You need to log in before you can comment on or make changes to this bug.