TextIndicator can have stale contentImage data and crash https://bugs.webkit.org/show_bug.cgi?id=147770 -and corresponding- rdar://problem/22181735

Reviewed by Tim Horton.

If there is no contentImage or contentImageWithHighlight, set them to
nullptr.
* Shared/WebCoreArgumentCoders.cpp:
(IPC::ArgumentCoder<TextIndicatorData>::decode):



Canonical link: https://commits.webkit.org/165862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188115 268f45cc-cd09-0410-ab3c-d52691b4dbfc